# cuda-kernel-fusion

./: .gitignore  OPTIMIZATIONS.md  README.md  pyproject.toml
benchmarks/: README.md  bench_add_mul_exp.py  bench_quantize_int8.py  bench_template.py  benchmark_add_mul_exp.py
benchmarks/utils/: __init__.py  analysis.py  performance.py
cuda_ops/: __init__.py  add_mul_exp.py
ops/: __init__.py
ops/cuda/: __init__.py  add_mul_exp.py  quantize_int8.py
ops/cuda/csrc/: add_mul_exp.cu  add_mul_exp.h  quantize_int8.cu  quantize_int8.h
ops/torch/: __init__.py  add_mul_exp.py  quantize_int8.py
tests/: test_add_mul_exp.py  test_add_mul_exp_pytorch.py  test_quantize_int8_cuda.py  test_quantize_int8_pytorch.py
